--- a/templates/weather/map.html
+++ b/templates/weather/map.html
@@ -157,8 +157,8 @@
     // Get station data from Django template safely
     const stationDataElement = document.getElementById('station-data');
     let stationData = {
-        lat: 65.6835,
-        lng: -18.1262,
+        lat: 65.66423644768108,
+        lng: -18.097805002171956,
         name: 'IAKURE31 - Akureyri Veðurstöð'
     };
     
